2010-09-22 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- fixed bug: the clickable library now checks whether it is loaded before
	pgfplots and complaints if so
	- fixed bug: '\addplot[only marks]' had no default plot mark. It uses
	'mark=*' now.

2010-09-21 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- fixed bug with unit vector ratio: there have been expansion problems in
	certain cases which lead to wrongly scaled graphics or compilation failure
	- fixed bug in polar lib

2010-09-16 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- improved plot graphics 3D: improved examples and added 'snap z' feature.

2010-09-15 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- improved automatic normal vector detection 
	- improved plot graphics 3D

2010-09-11 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- improved bugtracker

2010-09-09 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- fixed bug: legend to name and colorbar to name have been broken
	- improved handling of 'empty line=auto': for mesh/surf, it will
	automatically be set to scanline, otherwise it is 'jump'. It now also has a
	backwards compatibility switch activated by 'compat' which uses 'none' for
	2d plots
	- improved consistency between 'plot box ratio' and 'unit vector ratio':
	both now accept space--separated arguments (plot box ratio also brace
	constructions for backw. compat)

2010-09-08 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- added 'table/every nth row' key
	- fixed bug: now, extra tick labels can have a different 'ticklabel pos'
	than the original axes (it was broken since 1.2.2)
	- fixed bug: it is now allowed to provide '#' (hash sign) in \addplot
	option arguments (for example to define 'x filter/.code={...#1...}')
	- added support for \pgfplotsforeachungrouped \a/\b in {...} syntax

2010-09-07 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- added 'table/comment chars' key.