@@ -36,6 +36,18 @@
 		xmin=0,xmax=360,
 		ymin=0,
 	},
+	/pgfplots/xticklabel in circle/.style={
+		xtick align=inside,
+		xticklabel style={
+			rotate=90,
+			sloped like x axis={%
+				execute for upside down={\tikzset{anchor=north east}},
+				%allow upside down,
+				reset nontranslations=false},
+			anchor=south west,
+			%font=\tiny,
+		}
+	},
 }
 
 \def\pgfplots@polaraxis@activate{%
