@@ -3,6 +3,7 @@
 	pgfplots and complaints if so
 	- fixed bug: '\addplot[only marks]' had no default plot mark. It uses
 	'mark=*' now.
+	- fixed bug: removed "bashishm" in matlab2pgfplots.sh
 
 2010-09-21 Christian Feuersaenger <ludewich@users.sourceforge.net>
 	- fixed bug with unit vector ratio: there have been expansion problems in
